fix spacing on order

--- a/_private/scss/admin/metaboxes/_llms-metabox.scss
+++ b/_private/scss/admin/metaboxes/_llms-metabox.scss
@@ -28,7 +28,7 @@
 		background: #ffffd7;
 		font-style: italic;
 		left: 0;
-		padding: 1px;
+		padding: 2px;
 		position: absolute;
 		right: 0;
 		top: 0;
