--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -2585,7 +2585,7 @@ a.llms-view-as {
   background: #ffffd7;
   font-style: italic;
   left: 0;
-  padding: 1px;
+  padding: 2px;
   position: absolute;
   right: 0;
   top: 0;
